--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ukg-front-end-assignment-2024-hcm-lyudmil-nikolov",
+  "name": "hcm-application",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
